# SentientCities

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
ai-orchestrator/: pyproject.toml  requirements.txt
ai-orchestrator/config/: agents.yaml
ai-orchestrator/src/: __init__.py  main.py
ai-orchestrator/src/agents/: __init__.py  agent_manager.py
ai-orchestrator/src/grpc_client/: __init__.py
ai-orchestrator/src/memory/: __init__.py
ai-orchestrator/src/websocket/: __init__.py  server.py
docker/: node.Dockerfile  python.Dockerfile  rust.Dockerfile
docs/: PRD.md  api.md  architecture.md
shared/constants/: world_constants.yaml
shared/proto/: simulation.proto
shared/schemas/: websocket_messages.json
simulation-engine/: Cargo.toml  build.rs
simulation-engine/src/: lib.rs  main.rs
simulation-engine/src/agents/: agent.rs  mod.rs
simulation-engine/src/grpc/: mod.rs
simulation-engine/src/objects/: house.rs  mod.rs  resource.rs
simulation-engine/src/physics/: mod.rs
simulation-engine/src/world/: mod.rs  world.rs
visualization/: package.json
visualization/public/: index.html
visualization/src/: App.css  App.tsx  index.css
visualization/src/components/: AgentPanel.tsx  MemoryViewer.tsx  NeedsDisplay.tsx  WorldView.tsx
visualization/src/state/: agentSlice.ts  store.ts  worldSlice.ts
visualization/src/three/: AgentMesh.ts  HouseMesh.ts  ResourceMesh.ts
visualization/src/websocket/: client.ts
