[project]
name = "sentient-cities-ai"
version = "0.1.0"
description = "AI orchestration layer for SentientCities"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]